# OpenSR

./: .gitignore  CMakeLists.txt  Makefile.root  README.md  opensr_setup.sh
.github/actions/install-dependencies-composite-action/: action.yml
.github/workflows/: build.yml  coverage.yml  lint.yml
Engine/: AnimatedCursor.cpp  CMakeLists.txt  CursorManager.cpp  DATTranslator.cpp  Engine.cpp  Engine.qrc  GAIAnimatedImage.cpp  GAIMaterial.cpp  GAIMaterial.h  GAIShader.cpp  GAIShader.h  GAITexture.cpp  MPG123MusicDecoder.cpp  MPG123MusicDecoder.h  Music.cpp  PlanetDrawer.cpp  QMLHelper.cpp  QMLQuestPlayer.cpp  ResourceManager.cpp  ResourceManager_p.h  Sound.cpp  SoundManager.cpp  SoundManager_p.h  SpaceMouseArea.cpp  TexturedBezierCurve.cpp  TexturedPolyline.cpp  Types.cpp  VorbisMusicDecoder.cpp  VorbisMusicDecoder.h  main.cpp
Engine/shaders/: GAIShader.frag  GAIShader.vert
ImagePlugin/: CMakeLists.txt  GAIAnimationIO.cpp  GAIAnimationIO.h  GIImageIO.cpp  GIImageIO.h  HAIAnimationIO.cpp  HAIAnimationIO.h  PSDImageIO.cpp  PSDImageIO.h  QtOpenSRImagePlugin.cpp  QtOpenSRImagePlugin.h
QM/: CMakeLists.txt  Parser.cpp  QM.cpp  QuestPlayer.cpp
QML/: Button.qml  GameWindow.qml  MainMenu.qml  ObjectConfig.js  PlanetView.qml  Projectile.qml  QuestPlayer.qml  QuestSelectionMenu.qml  ScreenLoader.js  ShipWindow.qml  SpaceObjectItem.qml  SpaceView.qml  TrajectoryItem.qml  qml.qrc  qmldir
Ranger/: CMakeLists.txt  DAT.cpp  GAILoader.cpp  GILoader.cpp  HAILoader.cpp  PKG.cpp  PSDLoader.cpp  ZLib.cpp
World/: Artefact.cpp  Artefact.h  Asteroid.cpp  Asteroid.h  CMakeLists.txt  CargoHook.cpp  CargoHook.h  Container.cpp  Container.h  CursorManager.cpp  CursorManager.h  DefenceGenerator.cpp  DefenceGenerator.h  DesertPlanet.cpp  DesertPlanet.h  Droid.cpp  Droid.h  Engine.cpp  Engine.h  Equipment.cpp  Equipment.h  Goods.cpp  Goods.h  Hull.cpp  Hull.h  InhabitedPlanet.cpp  InhabitedPlanet.h  Item.cpp  Item.h  MannedObject.cpp  MannedObject.h  Micromodulus.cpp  Micromodulus.h  Planet.cpp  Planet.h  PlanetarySystem.cpp  PlanetarySystem.h  Race.cpp  Race.h  Radar.cpp  (+32 more)
data/: opensr.js  opensrTestMode.js
data/World/: DefaultWorldGen.js  TestWorldGen.js
include/OpenSR/: AnimatedCursor.h  CMakeLists.txt  CursorManager.h  DATTranslator.h  Engine.h  GAIAnimatedImage.h  GAITexture.h  Music.h  MusicDecoder.h  OpenSR.h  PlanetDrawer.h  PluginInterface.h  QMLHelper.h  QMLQuestPlayer.h  ResourceManager.h  Sound.h  SoundManager.h  SpaceMouseArea.h  TexturedBezierCurve.h  TexturedPolyline.h  Types.h  libRangerQt.h
include/OpenSR/QM/: CMakeLists.txt  Parser.h  QM.h  QuestPlayer.h
tests/: CMakeLists.txt  TestShip.h
tests/World/: CMakeLists.txt
tests/World/Ship/: CMakeLists.txt  TestShip.cpp
tests/qml/: CMakeLists.txt  ErrorCollector.cpp  ErrorCollector.h  SpixOSRTest.cpp  SpixOSRTest.h  main.cpp
tools/: CMakeLists.txt
tools/DATTools/: CMakeLists.txt  convert.cpp  crc32.cpp  crypt.cpp  crypt.h  json.cpp
tools/PlanetViewer/: CMakeLists.txt  main.cpp
tools/QuestPlayer/: CMakeLists.txt  PlayerWindow.cpp  PlayerWindow.h  main.cpp
tools/ResourceViewer/: CMakeLists.txt  ExtractDialog.cpp  ExtractDialog.h  FileModel.cpp  FileModel.h  MainWindow.cpp  MainWindow.h  main.cpp
